change the share link button to use the real server url remove the hello world menu item

--- a/dumbhippo/trunk/client/common/firefox/extension/chrome/locale/en-US/overlay.dtd
+++ b/dumbhippo/trunk/client/common/firefox/extension/chrome/locale/en-US/overlay.dtd
@@ -1,3 +1,2 @@
-<!ENTITY helloworld "Hello World!">
 <!ENTITY toolbarbutton.label "Link Swarm">
-<!ENTITY toolbarbutton.tooltip "Share page via Mugshot">
+<!ENTITY toolbarbutton.tooltip "Share page on Mugshot">
