--- a/dumbhippo/trunk/client/canvas/TODO
+++ b/dumbhippo/trunk/client/canvas/TODO
@@ -5,22 +5,6 @@ List of possible future enhancements / likely directions, we are doing these "as
   add HippoCanvasContainer interface, add set_parent/get_parent on canvas item that 
   gets/sets a container, move get_position and set_child_visible from box to container
 
-- Set font and text fg color on entire boxes w/ children
-
-  add some way to "cascade" properties; most simply, just having each parent create layouts
-  for its children that have the font of the parent would be very helpful and avoid
-  a bunch of "font" properties we have right now; but cascading certain other props
-  could also be right. Text foreground color for example. Maybe text properties
-  and only text properties are the ones that make sense here. In that case 
-  the whole feature can be done via the existing create_layout function.
-
-- Set class-default font and colors
-
-  if you allow setting a box to "gray 11px" for example, then the CanvasLink items in there 
-  will override the gray with blue, since links default to blue. So each item should 
-  first use its own props, then its container's props, then its class props, then its
-  parent class props.
-
 - Avoid having to always align images
 
   image item should maybe default to center alignment instead of fill like most items do
@@ -41,5 +25,29 @@ List of possible future enhancements / likely directions, we are doing these "as
     get_height_request(item, for_width, &minimum, &natural);
   The merging makes it easier to implement in items, since the min/natural code is often
   related or the same. Note also the addition of natural height, something 
-  we don't have right now.
-  
+  we don't have right now.  
+
+- Clean up cascading styles
+
+  Right now affect_font_desc / affect_color / get_color are on HippoCanvasContext,
+  they should probably all be on a separate interface (HippoStylist?) or something
+  like that. Then HippoStyle would also implement this interface perhaps.
+
+- Set class-default font and colors
+
+  if you allow setting a box to "gray 11px" for example, then the CanvasLink items in there 
+  will override the gray with blue, since links default to blue. So each item should 
+  first use its own props, then its context's props, then its class props, then its
+  parent class props.
+
+  There's a little hack around this right now with HippoCanvasBoxClass::default_color
+
+- Allow style props to be set to "default"
+
+  Right now the color is set or unset. It should instead be default, set, or unset.
+    set = use own value
+    default = use class default value
+    unset =  use context's value, then class default value
+
+  This would make inheritance of text fg color much more useful ; right now 
+  link items mess it up since there's no way to force them back to the link color.
