- implement Mike's click-to-expand-blocks idea - add tooltip-changed signal on canvas items so tips can change while they are active - also recalculate tooltip if size allocation changes - rename hippo_canvas_box_move to set_position, then add a _move that takes a gravity - avoid repainting children that aren't visible in HippoCanvasBox

--- a/dumbhippo/trunk/client/canvas/TODO
+++ b/dumbhippo/trunk/client/canvas/TODO
@@ -41,3 +41,13 @@ List of possible future enhancements / likely directions, we are doing these "as
   parent class props.
 
   There's a little hack around this right now with HippoCanvasBoxClass::default_color
+
+- The return value of button press event really needs to be known by the parent 
+  in advance.
+
+  If the parent is going to handle the click if the child doesn't, then it needs 
+  to be able to display prelights and change the mouse cursor and so forth.
+  
+  One approach might be to generalize get_pointer to return some kind of 
+  "what-this-item-handles-info" (and enforce it by not delivering events
+  the item doesn't say it will handle)
